# postcode-pt

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
scripts/: download_data.py  ingest.py
src/postcode_pt/: __init__.py  main.py
src/postcode_pt/api/v1/: districts.py  postal_codes.py  router.py
src/postcode_pt/core/: config.py
src/postcode_pt/db/: models.py  session.py
src/postcode_pt/models/: responses.py
src/postcode_pt/services/: districts.py  postal_codes.py
tests/: conftest.py  test_districts.py  test_health.py  test_postal_codes.py
